fix(메인페이지) : Genre.genre-area-rank-wrap width: 1150px -> width: 1120px (#14)

--- a/src/components/Mainpage/genreAndAreaRank/GenreAndAreaRank.style.css
+++ b/src/components/Mainpage/genreAndAreaRank/GenreAndAreaRank.style.css
@@ -4,7 +4,7 @@
 }
 .genre-area-rank-wrap {
   margin: 40px;
-  width: 1150px;
+  width: 1120px;
   height: 481px;
 }
 .genre-area-rank-header {
